<resources>
    <string name="app_name">性能测试</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_window_utils">WindowUtils</string>

    <!--textview memory-->
    <string name="total_memory">总内存：</string>
    <string name="available_memory">可用内存：</string>
    <string name="used_memory">已使用内存：</string>
    <string name="app_memory">app占用内存：</string>
    <!--button memory-->
    <string name="open_window_memory">获取app内存</string>
    <string name="close_window_memory">关闭悬浮窗</string>
    <string name="get_memory_info">内存信息</string>
    <!--editview memory-->
    <string name="memory_pkg_hint">请输入测试包的pid，以空格分隔</string>
</resources>
